# RUD

./: .gitignore  README.md  pyproject.toml
loom/kernel_hub/: Dockerfile  Dockerfile.amd  Dockerfile.fa3  docker-compose.amd.yml  docker-compose.yml  env.dev  pyproject.toml
loom/kernel_hub/kernel_evaluator/: README.md  __init__.py  app.py
loom/kernel_hub/kernel_evaluator/api/: api_keys.py  evaluation.py  kernels.py  scaffold.py
loom/kernel_hub/kernel_evaluator/db/: __init__.py  models.py  ops.py  session.py
loom/kernel_hub/kernel_evaluator/db/migrations/: env.py
loom/kernel_hub/kernel_evaluator/db/migrations/versions/: 001_unified_schema.py  002_api_keys.py  003_seed_admin_api_key.py  004_eval_run_contract.py  005_external_kernel_fields.py  006_overhead_pct_default.py
loom/kernel_hub/kernel_evaluator/generic_starter_kernels/: add_rms_norm_hip.cpp  rms_norm_hip.cpp  sdpa_tk_mha.cu
loom/kernel_hub/kernel_evaluator/inliner/: __init__.py  artifact_builder.py  inject_ptx.py  retrieval.py  types.py
loom/kernel_hub/kernel_evaluator/services/: api_keys.py  artifact_requests.py  benchmark_subprocess.py  compile_subprocess.py  execution.py  jobs.py  profile_subprocess.py  queue_state.py  run_contracts.py  workers.py
loom/kernel_hub/kernel_evaluator/services/evaluation/: DESIGN.md  __init__.py  artifacts.py  benchmark.py  builders.py  cuda_launcher.py  executors.py  packages.py  registry.py  runtime.py  specs.py  task_factory.py  types.py
loom/kernel_hub/kernel_evaluator/services/evaluation/profiling/: __init__.py  controller.py  ncu.py  rocprof.py  runner.py  types.py
loom/kernel_hub/kernel_evaluator/services/plugins/: __init__.py  add_aiter.py  aiter_moe_up_gemm.py  cuda_int4_matmul.py  fa3_paged_decode.py  fp8_gemm.py  linear.py  minimax_sparse_decode_indexer.py  mla_decode_fp8.py  rms_norm.py  sdpa.py  sparse_attention_fwd.py  spec_helpers.py  targets.py
loom/kernel_hub/replacements/: fetch_kernel.py  fx_kernel_replacements.py
loom/kernel_hub/replacements/candidates/gemm/kernels/: mm_abt_4096_128_3072.cu  mm_abt_4096_3072_128.cu  mm_abt_4608_27648_3072.cu  mm_abt_512_18432_3072.cu  mm_tk_ab.cu  (+15 more)
loom/kernel_hub/replacements/candidates/include/: tma_desc_meta.cuh
loom/kernel_hub/replacements/experimental/: mm_cluster_mcast_4608_27648_3072.cu  mm_cutlass_abt_4096_3072_3072.cu  sdpa_tk_mha_exp.cu
loom/kernel_hub/scaffold/: scaffold.yaml
loom/kernel_hub/scaffold/agent_runner/: Dockerfile  __init__.py  claude_settings.json  config.toml  finish_run.sh  generate_python_registration.sh  init_run.py  postprocess_tma.sh  resolve_plugin.py  rud_kernel.py  run_agents.sh  wait_for_speedup.sh
loom/kernel_hub/scaffold/agent_runner/python_registration_templates/: mm_abt_4096_128_3072.py  mm_abt_4096_3072_128.py  mm_abt_4096_3072_9216.py  mm_abt_4608_27648_3072.py  mm_abt_512_18432_3072.py  mm_abt_512_3072_3072.py  mm_abt_512_3072_7680.py  mm_abt_512_3072_9216.py  mm_abt_512_9216_3072.py  mm_tk_abt.py
loom/kernel_hub/scaffold/client/: __init__.py  admin_cli.py  api.py  bench_cli.py  config.py  containers.py  orchestrator.py  prompts.py
loom/kernel_hub/scaffold/eval/: BUILD_MODE.md
loom/kernel_hub/scaffold/instructions/common/: 10-task.md  30-profiling.md
loom/kernel_hub/scaffold/instructions/cuda/: 20-cuda-docs.md
loom/kernel_hub/scaffold/knowledge_base/: amd.md  cuda.md
loom/kernel_hub/scaffold/multiagent/: roles.yaml
loom/kernel_hub/scaffold/tests/: test_scaffold_client.py
(+98 files in other folders)
