[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeloop"
version = "0.1.0"
description = "Self-improving agentic loop using Claude Code"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
claudeloop = "claudeloop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["claudeloop"]
