[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.3.0"
description = "Loom - a lightweight task console for Claude Code / Codex (deep interview -> PLAN.md -> /goal, git worktrees, diffs, notes, run-monitor)"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
loom = "loom.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["loom"]
# Ship the vendored TKCC kernel stack (scripts, Dockerfiles, compose, plugins)
# as package data even before it's committed / regardless of VCS-ignore.
artifacts = ["loom/kernel_hub/**"]
